# Key-Interval-Astar

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: Benchmark.cpp  BenchmarkUtils.cpp  BenchmarkUtils.h  CBSBenchmark.cpp  CBSSingleTest.cpp  GenerateComparisonSummary.cpp  GenerateOverallStatistics.cpp  JPSCBSBenchmark.cpp  JPSCBSSingleTest.cpp  SingleTest.cpp
benchmark_results/AStar/: benchmark_AStar_den312d.csv  benchmark_AStar_lak303d.csv  benchmark_AStar_maze-32-32-2.csv  benchmark_AStar_orz900d.csv  benchmark_AStar_random-32-32-20.csv  benchmark_AStar_random-64-64-10.csv  benchmark_AStar_random-64-64-20.csv  benchmark_AStar_room-32-32-4.csv  benchmark_AStar_room-64-64-16.csv  benchmark_AStar_room-64-64-8.csv  benchmark_AStar_warehouse-10-20-10-2-1.csv  benchmark_AStar_warehouse-10-20-10-2-2.csv
benchmark_results/HPAStar/: benchmark_HPAStar_den312d.csv  benchmark_HPAStar_lak303d.csv  benchmark_HPAStar_maze-32-32-2.csv  benchmark_HPAStar_orz900d.csv  benchmark_HPAStar_random-32-32-20.csv  benchmark_HPAStar_random-64-64-10.csv  benchmark_HPAStar_random-64-64-20.csv  benchmark_HPAStar_room-32-32-4.csv  benchmark_HPAStar_room-64-64-16.csv  benchmark_HPAStar_room-64-64-8.csv  benchmark_HPAStar_warehouse-10-20-10-2-1.csv  benchmark_HPAStar_warehouse-10-20-10-2-2.csv
benchmark_results/KeyIntervalAStar/: benchmark_KeyIntervalAStar_den312d.csv  benchmark_KeyIntervalAStar_lak303d.csv  benchmark_KeyIntervalAStar_maze-32-32-2.csv  benchmark_KeyIntervalAStar_orz900d.csv  benchmark_KeyIntervalAStar_random-32-32-20.csv  benchmark_KeyIntervalAStar_random-64-64-10.csv  benchmark_KeyIntervalAStar_random-64-64-20.csv  benchmark_KeyIntervalAStar_room-32-32-4.csv  benchmark_KeyIntervalAStar_room-64-64-16.csv  benchmark_KeyIntervalAStar_room-64-64-8.csv  benchmark_KeyIntervalAStar_warehouse-10-20-10-2-1.csv  benchmark_KeyIntervalAStar_warehouse-10-20-10-2-2.csv
benchmark_results/KeyIntervalAStar(o)/: benchmark_KeyIntervalAStar_den312d.csv  benchmark_KeyIntervalAStar_lak303d.csv  benchmark_KeyIntervalAStar_maze-32-32-2.csv  benchmark_KeyIntervalAStar_orz900d.csv  benchmark_KeyIntervalAStar_random-32-32-20.csv  benchmark_KeyIntervalAStar_random-64-64-10.csv  benchmark_KeyIntervalAStar_random-64-64-20.csv  benchmark_KeyIntervalAStar_room-32-32-4.csv  benchmark_KeyIntervalAStar_room-64-64-16.csv  benchmark_KeyIntervalAStar_room-64-64-8.csv  benchmark_KeyIntervalAStar_warehouse-10-20-10-2-1.csv  benchmark_KeyIntervalAStar_warehouse-10-20-10-2-2.csv
benchmark_summaries/: AStar_summaries.csv  HPAStar_summaries.csv  KeyIntervalAStar(o)_summaries.csv  KeyIntervalAStar_summaries.csv  combined_summaries.csv
data_loader/: MapLoader.cpp  MapLoader.h
src/KIAstar/: KeyIntervalAStar.cpp  KeyIntervalAStar.h  KeyIntervalAStarOptimal.cpp  KeyIntervalAStarOptimal.h  Preprocess.cpp  Preprocess.h
src/action/: Action.cpp  Action.h
src/astar/: AStar.cpp  AStar.h
src/basic/: Agent.h  Vertex.h
src/heuristic/: Heuristic.cpp  Heuristic.h
src/hpastar/: HPAStar.cpp  HPAStar.h
src/jps/: JPS.cpp  JPS.h
src/obs/: HighLevelSearch.cpp  HighLevelSearch.h  IntervalKeyPointSearch.cpp  IntervalKeyPointSearch.h  KeyIntervalAStar.cpp  KeyIntervalAStar.h  Preprocess.cpp  Preprocess.h  Preprocess1.cpp  Preprocess1.h  Preprocess2.cpp  Preprocess2.h
src/solver/: SolverInterface.h
src/utilities/: GridUtility.h  Log.h  MemoryUtility.cpp  MemoryUtility.h
test/: CMakeLists.txt  KeyIntervalAStarTest.cpp  PreprocessDetailedTest.cpp  PreprocessTest.cpp  README.md
